2007-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py (Servicer._parseManagersWorkers,
	  Servicer.getWorkers):
	  Sort the list of managers and workers.

2007-03-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/worker/feed.py:
	  Change indentation to 4 columns rather than 8 for one method.

2007-03-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/gtk/main.py:
	  Fix specifying admin on command line.

2007-03-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/gtk/client.py:
	  Don't use undefined variables if setup() raises.
	* flumotion/component/producers/looper/admin_gtk.py:
	  The admin told me this had a bug, so fix it.

2007-03-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/greeter.py (StartNew.on_next): Make sure
	that bindir is in the path when we run the service script.

	* flumotion/admin/gtk/main.py: Make it so the greeter doesn't run
	a recursive main loop and just uses the reactor. Seems to work but
	will need some testing.

	* flumotion/admin/gtk/wizard.py (WizardCancelled): New exception,
	errbacked by Wizard.run_async() if the user cancels the wizard.
	(Wizard.show, Wizard.destroy): Removed, GladeWindow does this for
	us.
	(Wizard.on_delete_event): Emit finished instead of stopping a main loop.
	(Wizard.run_async): New method. Returns a deferred that will fire
	when the user has decided on something.
	(Wizard.run): Implement using run_async.

2007-03-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/manager/base.py (ManagerAvatar._mindCallRemoteErrback):
	  Use a better failure logging method.

2007-03-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/feedcomponent.py
	  (FeedComponentMedium.remote_setGstDebug):
	  add remote method that allows us to set a GST_DEBUG string at
	  runtime on a component.

2007-03-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
